fixed the spacing

--- a/contact.css
+++ b/contact.css
@@ -3,7 +3,7 @@
     margin: 20px 10px 10px 10px;
     padding: 10px 10px 10px 10px;
     background-color:white;
-    border-color: black;
+
 }
 .submitbutton{
     margin: 10px 10px 10px 10px;
